--- a/resources/sass/msu/components/_navigation.scss
+++ b/resources/sass/msu/components/_navigation.scss
@@ -38,7 +38,8 @@ $slider-btn-width: rem-calc(40);
     width: $panel-width;
     bottom: 6.25rem;
     max-height: calc(100vh - #{rem-calc(431)});
-    overflow: hidden;
+    /*overflow: hidden; Dev Note: we use this setting for our custom scrollbar. For now, we'll show the overflow*/
+    overflow: scroll;
   }
 
   .ant-table-tbody > tr {
